--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,17 @@ environment:
   sdk: ^3.0.0
 
 dependencies:
+  cloud_firestore: ^4.14.0
+  firebase_auth: ^4.16.0
+  firebase_core: ^2.24.2
   flutter:
     sdk: flutter
   flutter_masked_text2: ^0.9.1
+  google_sign_in: ^6.2.1
   intl: ^0.19.0
   provider: ^6.1.2
+  shared_preferences: ^2.3.2
+
 
 dev_dependencies:
   flutter_test:
