--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   cloud_firestore: ^5.4.1
+  data_table_2: ^2.5.15
   firebase_auth: ^5.2.1
   firebase_core: ^3.4.1
   flutter:
